ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4/input.ts.stderr
error: Unexpected character '¬'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4/input.ts:1:14
  |
1 | function f(a,¬) {
  |              ^

error: Expected ), got {
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList4/input.ts:1:17
  |
1 | function f(a,¬) {
  |                 ^

